--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>
+
+        </title>
+        <style>
+body {
+    color: darkslategray;
+}
+
+.ingrediente {
+    color: deeppink;
+}
+
+.ingrediente.hover {
+    color: hotpink;
+}
+
+#harina {
+    color: fuchsia;
+}
+
+        </style>
+    </head>
     <body>
         <table>
             <tbody>
                 <tr>
-                    <td>Receta para hacer hotcakes</td>
+                    <td style="color: blueviolet;">Receta para hacer hotcakes</td>
                 </tr>
                 <tr>
                     <td>Cantidad</td>
-                    <td>Ingrediente</td>
+                    <td class="ingrediente">Ingrediente</td>
                 </tr>
                 <tr>
                     <td>5 cucharadas</td>
@@ -21,5 +43,8 @@
                 </tr>
             </tbody>
         </table>
+        <script>
+            
+        </script>
     </body>
 </html>
