--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@ body {
                 </tr>
             </tbody>
         </table>
-        <script>
-            
-        </script>
+
+        <button id="contador_clicks"></button>
+
+        <script src="js.js"></script>
     </body>
 </html>
