--- a/lab1.html
+++ b/lab1.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Laboratorio 1</title>
     </head>
+    <body>
+        <h1>Laboratorio 1</h1>
+        <h2>Iván Ricardo Paredes Avilez A01705083</h2>
+        <h3>Correo electrónico: a01705083@tec.mx</h3>
+    </body>
 </html>
