foto más pequeña

--- a/lab1.html
+++ b/lab1.html
@@ -7,6 +7,6 @@
         <h1>Laboratorio 1</h1>
         <h2>Iván Ricardo Paredes Avilez A01705083</h2>
         <h3>Correo electrónico: a01705083@tec.mx</h3>
-        <img src="Foto de Perfil.jpg" alt="Foto de Perfil" width="200px">
+        <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
     </body>
 </html>
