--- a/lab1.html
+++ b/lab1.html
@@ -4,9 +4,11 @@
         <title>Laboratorio 1</title>
     </head>
     <body>
-        <h1>Laboratorio 1</h1>
-        <h2>Iván Ricardo Paredes Avilez A01705083</h2>
-        <h3>Correo electrónico: a01705083@tec.mx</h3>
-        <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
+        <header>
+            <h1>Laboratorio 1</h1>
+            <h2>Iván Ricardo Paredes Avilez A01705083</h2>
+            <h3>Correo electrónico: a01705083@tec.mx</h3>
+            <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
+        </header>
     </body>
 </html>
