--- a/lab1.html
+++ b/lab1.html
@@ -10,5 +10,12 @@
             <h3>Correo electrónico: a01705083@tec.mx</h3>
             <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
         </header>
+        <footer>
+            <p>
+                <strong>Hecho con Visual Studio Code</strong>
+                <br>Enlace del editor: 
+                <a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a>
+            </p>
+        </footer>
     </body>
 </html>
