formato de html5

--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Laboratorio 1</title>
-    </head>
-    <body>
-        <header>
-            <h1>Laboratorio 1</h1>
-            <h2>Iván Ricardo Paredes Avilez A01705083</h2>
-            <h3>Correo electrónico: a01705083@tec.mx</h3>
-            <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
-        </header>
-        <footer>
-            <p>
-                <strong>Hecho con Visual Studio Code</strong>
-                <br>Enlace del editor: 
-                <a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a>
-            </p>
-        </footer>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laboratorio 1</title>
+</head>
+
+<body>
+    <header>
+        <h1>Laboratorio 1</h1>
+        <h2>Iván Ricardo Paredes Avilez A01705083</h2>
+        <h3>Correo electrónico: a01705083@tec.mx</h3>
+        <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
+    </header>
+    <footer>
+        <p>
+            <strong>Hecho con Visual Studio Code</strong>
+            <br>Enlace del editor: 
+            <a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a>
+        </p>
+    </footer>
+</body>
+
 </html>
