--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -8,12 +8,26 @@
 </head>
 
 <body>
+
     <header>
         <h1>Laboratorio 1</h1>
-        <h2>Iván Ricardo Paredes Avilez A01705083</h2>
-        <h3>Correo electrónico: a01705083@tec.mx</h3>
         <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
+        <h2>Información de Contacto:</h2>
     </header>
+
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Matrícula</th>
+            <th>Correo Electrónico</th>
+        </tr>
+        <tr>
+            <td>Iván Ricardo Paredes Avilez</td>
+            <td>A01705083</td>
+            <td>A01705083@tec.mx</td>
+        </tr>
+    </table>
+
     <footer>
         <p>
             <strong>Hecho con Visual Studio Code</strong>
@@ -21,6 +35,7 @@
             <a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a>
         </p>
     </footer>
+
 </body>
 
 </html>
