thead, tbody, tfoot

--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -16,16 +16,21 @@
     </header>
 
     <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Matrícula</th>
-            <th>Correo Electrónico</th>
-        </tr>
-        <tr>
-            <td>Iván Ricardo Paredes Avilez</td>
-            <td>A01705083</td>
-            <td>A01705083@tec.mx</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Matrícula</th>
+                <th>Correo Electrónico</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Iván Ricardo Paredes Avilez</td>
+                <td>A01705083</td>
+                <td>A01705083@tec.mx</td>
+            </tr>
+        </tbody>
+        <tfoot></tfoot>
     </table>
 
     <footer>
