--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Laboratorio 1</h1>
         <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
-        <h2>Información de Contacto:</h2>
+        <h2>Tabla con información de Contacto:</h2>
     </header>
 
     <table>
