--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -8,14 +8,19 @@
 </head>
 
 <body>
-
+    <!--Encabezado de la página-->
     <header>
         <h1>Laboratorio 1</h1>
-        <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
-        <h2>Tabla con información de Contacto:</h2>
     </header>
 
+    <!--Imagen-->
+    <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
+
+    <h3>Tabla con información de Contacto:</h3>
+
+    <!--Tabla-->
     <table>
+        <!--Encabezado de la tabla-->
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -23,6 +28,7 @@
                 <th>Correo Electrónico</th>
             </tr>
         </thead>
+        <!--Cuerpo de la tabla-->
         <tbody>
             <tr>
                 <td>Iván Ricardo Paredes Avilez</td>
@@ -30,9 +36,58 @@
                 <td>A01705083@tec.mx</td>
             </tr>
         </tbody>
+        <!--Pie de la tabla (Por el momento vacío)-->
         <tfoot></tfoot>
     </table>
 
+    <h3>Formas:</h3>
+
+    <!--Formas o formularios-->
+    <form>
+        <!--Texto-->
+        <label for="nombre">Ingresa tu nombre:</label>
+        <input type="text" placeholder="Escribe tu nombre" name="nombre" id="nombre">
+        <br><br>
+        <label for="matricula">Ingresa tu matrícula:</label>
+        <input type="text" placeholder="Escribe tu matrícula" name="matricula" id="matricula">
+        <br><br>
+
+        <!--Email-->
+        <label for="correo">Ingresa tu correo:</label>
+        <input type="email" placeholder="nombre@dominio.com" name="correo" id="correo">
+        <br><br>
+
+        <!--Color-->
+        <label for="color">Elige un color:</label>
+        <input type="color" name="color" id="color">
+        <br><br>
+
+        <!--Fecha-->
+        <label for="fecha">Selecciona una fecha:</label>
+        <input type="date" name="fecha" id="fecha">
+        <br><br>
+
+        <!--Número-->
+        <label for="numero">Introduce un número:</label>
+        <input type="number" name="numero" id="numero">
+        <br><br>
+
+        <!--Rango-->
+        <label for="rango">Rango:</label>
+        <input type="range" name="rango" id="rango" min="0" max="20">
+        <br><br>
+
+        <!--Tiempo-->
+        <label for="hora">Hora:</label>
+        <input type="time" name="tiempo" id="tiempo">
+        <br><br>
+
+        <!--Botón-->
+        <input type="button" value="Enviar">
+        <br><br>
+    </form>
+
+    <!--Pie de página-->
     <footer>
         <p>
             <strong>Hecho con Visual Studio Code</strong>
