--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -146,7 +146,7 @@
                     una especie de UPDATE a nivel de base de datos.</li>
                 <li>DELETE: Este método de petición permite eliminar un recurso específico. También es idempotente; 
                     es decir puede ser ejecutado varias veces y tiene el mismo efecto similar al PUT y GET. 
-                    Semánticamente se utiliza para eliminar de información existente</li>
+                    Semánticamente se utiliza para eliminar de información existente.</li>
             </ul>
         <br>
 
@@ -159,6 +159,15 @@
         
         <li>¿Qué método HTTP se utiliza cuando a través de un navegador web se accede a una página a través de un 
             URL?</li>
+        <p>El método que se utiliza es GET.</p>
+
+        <li>Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto? ¿Ocurrió algún error?</li>
+        <p>No significa que haya ocurrido un error, sino todo lo contrario, el código 200 indica que la solicitud ha 
+            sido un éxito.</p>
+
+        <li>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al 
+            sitio y se encontró con un error 404? ¿Por qué?</li>
+        <p></p>
         
     </ul>
 
@@ -173,6 +182,7 @@
         http://estilow3b.com/metodos-http-post-get-put-delete/</p>
     <p>GET vs. POST: los dos métodos de petición HTTP más conocidos cara a cara. (2020, 11 agosto). 
         IONOS Digital Guide. https://www.ionos.mx/digitalguide/paginas-web/desarrollo-web/get-vs-post/</p>
+    <p>200 OK - HTTP | MDN. (2022, 26 noviembre). https://developer.mozilla.org/es/docs/Web/HTTP/Status/200</p>
 
     <!--Pie de página-->
     <footer>
