--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -83,7 +83,7 @@
         <br><br>
 
         <!--Botón-->
-        <input type="button" value="Enviar">
+        <input type="submit" value="Enviar">
         <br><br>
     </form>
 
