Todas las preguntas

--- a/Laboratorio 1/lab1.html
+++ b/Laboratorio 1/lab1.html
@@ -175,8 +175,124 @@
 
         <li>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al 
             sitio y se encontró con un error 404? ¿Por qué?</li>
-        <p></p>
-        
+        <p>No es responsabilidad del desarrollador corregir como tal el sitio web ya que este código de error sale
+            cuando el contenido buscado de la web ha sido eliminado o modificado (intensionalmente), por lo que 
+            es probable que lo que se busca esté ahora en una URL distinta. Normalmente puede suceder porque el
+            usuario ha tecleado mal el URL o introdujo uno antiguo sin el conocimiento de que este cambió. Más bien, 
+            lo que puede hacer el desarrollador es notificar previamente a los usuarios.</p>
+
+        <li>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder 
+            al sitio y se encontró con un error 500? ¿Por qué?</li>
+        <p>En este caso sí es responsabilidad del desarrollador corregir este error ya que lo que significa
+            es que ha habido un problema con el servidor del sitio web. Por esta razón, los usuarios de la página
+            no pueden hacer nada para arreglar el error más que esperar a que sea reparado.</p>
+
+        <li>¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)? Menciona 
+            algunos elementos de HTML 4 que en HTML5 estén desaprobados.</li>
+        <p>Cuando un atributo está desaprobado significa que con la nueva actualización de Html, este ha sido
+            reemplazado por nuevos elementos que hacen lo mismo o mejoran las funciones. Sin embargo, muchos
+            navegadores siguen siendo compatibles con los atributos desaprobados hasta que estos finalmente se
+            vuelven obsoletos. Algunos ejemplos son los siguientes:</p>
+            <!--Lista dentro de otra lista-->
+            <ul>
+                <li>applet: Reemplazado por el tag HTML object.</li>
+                <li>dir: Reemplazado por el tag HTML ul.</li>
+                <li>isindex: Reemplazado por el tag HTML input.</li>
+                <li>menu: Reemplazado por el tag HTML ul.</li>
+            </ul>
+        <br>
+
+        <li>¿Cuáles son las diferencias principales entre HTML 4 y HTML5?</li>
+        <p>HTML4 tuvo su lanzamiento en 1999 y HTML5 está disponible desde 2014. Con HTML5 hubo pocos cambios para
+            las etiquetas de marcado salvo por algunas que fueron simplificadas. Sin embargo, HTML5 se basa en un
+            estándar y un análisis sintactico nuevos. Entre algunas de las características que lo diferencian es que
+            HTML5 incluye elementos multimedia, es más seguro y esta es una versión de HTML que permanecerá
+            actualizandose a lo largo del tiempo, así que ya no se tiene planeado un HTML6. Además, con las nuevas
+            funcionalidades, HTML5 ya no es completamente dependiente de CSS o JavaScript.
+        </p>
+
+        <li>¿Qué componentes de estructura y estilo tiene una tabla?</li>
+        <p>De acuerdo con (De León, s.f.) los componentes del elemento table son los siguientes:</p>
+            <!--Lista dentro de otra lista-->
+            <ul>
+                <li>caption: Provee un título para la tabla</li>
+                <li>colgroup: agrupa columnas temáticamente</li>
+                <li>col: aplica atributos comunes y estilos a una o más columnas. Sólo puede ser declarado 
+                    como hijo de colgroup.</li>
+                <li>tbody: representa a un cuerpo de la tabla.</li>
+                <li>thead: representa la sección de encabezado de la tabla.</li>
+                <li>tfoot: representa la sección de pie de la tabla.</li>
+                <li>tr: representa una fila. Puede ser declarado como hijo de tbody, thead, tfoot o table.</li>
+                <li>td: representa a una celda regular. Sólo puede ser declarado como hijo de tr.</li>
+                <li>th: representa a una celda de encabezado. Sólo puede ser declarado como hijo de tr.</li>
+            </ul>
+        <br>
+
+        <li>¿Cuáles son los principales controles de una forma HTML5?</li>
+        <p>Los principales controles son los siguientes:</p>
+            <!--Lista dentro de otra lista-->
+            <ul>
+                <li>number: campo de entrada para la introducción de un número</li>
+                <li>range: permite elegir entre un rango de valores</li>
+                <li>date: selector de fecha</li></liZ>
+                <li>color: permite al usuario elegir entre una selección de colores</li>
+                <li>datalist: permite a los usuarios elegir entre una lista de opciones sugeridas</li>
+                <li>tel: campo de entrada para un número telefónico</li>
+                <li>email: campo de entrada para un email</li>
+                <li>url: campo de entrada para un url</li>
+                <li>text: campo de entrada para texto</li>
+                <li>time: campo de entrada para una hora específica</li>
+            </ul>
+        <br>
+
+        <li>¿Qué tanto soporte HTML5 tiene el navegador que utilizas? Puedes utilizar la siguiente página para 
+            descubrirlo: http://html5test.com/ </li>
+        <p>Yo utilizo Firefox 110.0 en Windows 10 y utilizando el test, descubrí que mi navegador tiene
+            una puntuación de 466/555.</p>
+
+        <li>¿Cuál es el ciclo de vida de los sistemas de información? </li>
+        <p>Un sisema de información atraviesa 7 fases durante su ciclo de vida, los cuales están enlistados a
+            continuación:</p>
+            <!--Lista dentro de otra lista-->
+            <ol>     
+                <li>Fase de planificación: se prepara el diseño y posterior implementación del sistema.</li>  
+                <li>Fase de análisis: se busca concretar una serie de requisitos, que son los que regirán el 
+                    nuevo sistema o los cambios a introducir en el antiguo.</li>     
+                <li>Fase de diseño: se identifican soluciones potenciales, se evalúan y se elige la más conveniente.</li>
+                <li>Fase de desarrollo: Inicio de la producción.</li>
+                <li>Fase de integración y periodo de pruebas: corroborar que el diseño propuesto cumple con los 
+                    requisitos de negocio establecidos.</li>
+                <li>Fase de implementación: instalación del hardware y software elegidos, crear las aplicaciones 
+                    correspondientes, someterlas a pruebas, crear la documentación pertinente y capacitar a 
+                    los usuarios.</li>
+                <li>Fase de mantenimiento: consiste en introducir los ajustes necesarios para mejorar el rendimiento 
+                    y corregir los problemas que puedan surgir. </li>
+            </ol>
+        <br>
+
+        <li>¿Cuál es el ciclo de desarrollo de sistemas de información?</li>
+        <p>El cilo de desarrollo de un sistema de información empieza por analizar los tipos de requerimientos
+            del mismo:</p>
+            <!--Lista dentro de otra lista-->
+            <ul>
+                <li>Funcionales: requisitos necesarios para hacer que el sistema funcione. Ej: registrar 
+                    usuarios, loguearse, acceder a un listado de clientes.</li>
+                <li>No funcionales: son los que no están directamente relacionados con la funcionalidad 
+                    del sistema. Ej: el sistema deberá utilizar navegador Mozilla Firefox versión n o más.</li>
+            </ul>
+        <br>
+        <p>Los siguientes pasos están directamente relacionados con su desarrollo:</p>
+            <!--Lista dentro de otra lista-->
+            <ul>
+                <li>Fase de planeación: se especifica un plan para el proyecto que guiará a todos los interesados 
+                    o stakeholders a conseguir el producto especificado en el levantamiento de requerimientos.</li>
+                <li>Fase de diseño: los analistas o ingenieros de software crean un modelo abstracto del sistema 
+                    a construir basado en los requerimientos funcionales y no funcionales planteados en la 
+                    especificación de requerimientos. proporciona detalles sobre arquitectura del software, 
+                    estructuras de datos, interfaces y componentes que se necesitan para implementar el sistema.</li>
+                <li>Fase de desarrollo: se genera el código fuente en el lenguaje de programación escogido.</li>
+                <li>Fase de implementación: se lleva a cabo la puesta en marcha del producto de software.</li>
+            </ul>
     </ul>
 
     <!--Referencias-->
@@ -191,6 +307,22 @@
     <p>GET vs. POST: los dos métodos de petición HTTP más conocidos cara a cara. (2020, 11 agosto). 
         IONOS Digital Guide. https://www.ionos.mx/digitalguide/paginas-web/desarrollo-web/get-vs-post/</p>
     <p>200 OK - HTTP | MDN. (2022, 26 noviembre). https://developer.mozilla.org/es/docs/Web/HTTP/Status/200</p>
+    <p>Error 404: ¿Qué significa y cómo solucionarlo? (2023, 31 enero). IONOS Digital Guide. 
+        https://www.ionos.es/digitalguide/paginas-web/creacion-de-paginas-web/que-significa-el-error-404-not-found/</p>
+    <p>Qué es y cómo solucionar el Error 500. Internal server error. (2022, 21 junio). cdmon. 
+        https://www.cdmon.com/es/blog/error-500-internal-server-error</p>
+    <p>05.Tags y atributos desaprobados en HTML - TODO HTML. (s. f.-b). 
+        https://sites.google.com/site/dwebhtml/reference/deprecated</p>
+    <p>Barron, B. (2021, 8 abril). HTML vs HTML5: Conoce las diferencias cruciales entre ellos. Kinsta®. 
+        https://kinsta.com/es/blog/html-vs-html5/</p>
+    <p>De León, D. P. (s.f.). Elemento table. https://www.htmlquick.com/es/reference/tags/table.html</p>
+    <p>Es/Elementos de formulario adicionales del HTML5 - Web Education Community Group. (s.f.). 
+        https://www.w3.org/community/webed/wiki/Es/Elementos_de_formulario_adicionales_del_HTML5</p>
+    <p>Ciclo de vida de un sistema de información: fases y componentes. (s.f.).
+        https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/ciclo-de-vida-de-un-sistema-de-informacion-
+        fases-y-componentes</p>
+    <p>KeepCoding, R. (2023, 25 enero). ¿Qué es el ciclo de vida del desarrollo del sistema? KeepCoding Tech 
+        School. https://keepcoding.io/blog/ciclo-de-vida-del-desarrollo-del-sistema/</p>
 
     <!--Pie de página-->
     <footer>
