Estilo de header

--- a/Laboratorio 3/lab3.html
+++ b/Laboratorio 3/lab3.html
@@ -54,12 +54,36 @@
 
             <article class="article">
                 <h2>Contacto</h2>
+                <!--Imagen-->
+                <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
                 <p>Soy estudiante del Instituto Tecnológico y de Estudios Superiores de Moneterrey Campus Querétaro y
                     actualmente estoy en el 4to semestre de la carrera de Ingeniería en Tecnologías Computacionales. Dentro de 
                     mi área de estudios, uno de los temas que más me interesan son la inteligencia artificial y las criptomonedas. 
                     Hablando de otro tipo de intereses, me gusta todo lo que tenga que ver con los autos y además uno de mis
                     pasatiempos favoritos es jugar videojuegos. Como tal hoy en día no estoy llevando a cabo un proyecto personal, 
                     pero soy vicepresidente del grupo estudiantil ACM, el cual está dirigido principalmente a la programación.</p>
+                <h3>Tabla de información</h3>
+                <!--Tabla-->
+                <table>
+                    <!--Encabezado de la tabla-->
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Matrícula</th>
+                            <th>Correo Electrónico</th>
+                        </tr>
+                    </thead>
+                    <!--Cuerpo de la tabla-->
+                    <tbody>
+                        <tr>
+                            <td>Iván Ricardo Paredes Avilez</td>
+                            <td>A01705083</td>
+                            <td>A01705083@tec.mx</td>
+                        </tr>
+                    </tbody>
+                    <!--Pie de la tabla (Por el momento vacío)-->
+                    <tfoot></tfoot>
+                </table>
             </article>
 
             <article class="article">
