Estilo del Menú

--- a/Laboratorio 3/lab3.html
+++ b/Laboratorio 3/lab3.html
@@ -49,6 +49,9 @@
 
         </nav>
 
+        <!--Se agrega esta clase para que los elementos del contenido no suban a la navbar-->
+        <div class="clearfix"></div>
+
         <!--Contenido de la página-->
         <section id="content">
 
