Estilo de contenido y barra lateral

--- a/Laboratorio 3/lab3.html
+++ b/Laboratorio 3/lab3.html
@@ -146,10 +146,12 @@
         
                 <!--Botón-->
                 <input type="submit" value="Enviar">
-                <br><br>
             </form>
 
         </aside>
+
+        <!--Se agrega esta clase para que los elementos del contenido no suban a la navbar-->
+        <div class="clearfix"></div>
 
         <!--Pie de página-->
         <footer>
