--- a/Laboratorio 3/lab3.html
+++ b/Laboratorio 3/lab3.html
@@ -157,7 +157,7 @@
         <footer>
             <p>
                 <strong>Hecho con Visual Studio Code</strong>
-                <br>Enlace del editor: 
+                / Enlace del editor: 
                 <a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a>
             </p>
         </footer>
