--- a/Laboratorio 3/lab3.html
+++ b/Laboratorio 3/lab3.html
@@ -60,7 +60,7 @@
                 <!--Imagen-->
                 <img src="Foto de perfil pequeña.jpg" alt="Foto de Perfil" width="200px">
                 <br>
-                <p>Soy estudiante del Instituto Tecnológico y de Estudios Superiores de Moneterrey Campus Querétaro y
+                <p>Soy estudiante del Instituto Tecnológico y de Estudios Superiores de Monterrey Campus Querétaro y
                     actualmente estoy en el 4to semestre de la carrera de Ingeniería en Tecnologías Computacionales. Dentro de 
                     mi área de estudios, uno de los temas que más me interesan son la inteligencia artificial y las criptomonedas. 
                     Hablando de otro tipo de intereses, me gusta todo lo que tenga que ver con los autos y además uno de mis
@@ -299,7 +299,51 @@
 
             <article class="article">
                 <h2>Preguntas Laboratorio 3</h2>
-                <p>Texto de las preguntas lab 3</p>
+                <br>
+
+                <ul>
+                    <li>Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS?</li><br>
+                    <p>La utilidad de !important es que al usarlo le damos prioridad a la propiedad que le precede.
+                        A simple vista podríamos pensar que esto es lo que escribirías en tu código para que cuando 
+                        otra persona le de mantenimiento a la página, no pueda cambiar atributos importantes de tu 
+                        página escribiendo nuevo código en la parte de abajo del archivo. Sin embargo, uno de sus 
+                        principales usos es definir como !important las características que quieras que se muestren
+                        en navegadores actualizados (con soporte para la función !important) y definir 
+                        propiedades alternativas cuando se use una versión desactualizada de un navegador. Los
+                        nuevos buscadores leerán siempre lo que está marcado con !important y los viejos leerán 
+                        aquellas características que no están marcadas.</p><br>
+                    
+                    
+                </ul>
+            </article class="article">
+                <h2>Referencias</h2><br>
+                <p>BBC News Mundo. (2019, 12 marzo). ¿Cuál es la diferencia entre internet y la web? 
+                    (y por qué muchos las confunden). https://www.bbc.com/mundo/noticias-47538812</p><br>
+                <p>Edix, R. (2022, 11 julio). ¿Qué es una URL? Aquí te lo contamos. Edix España. 
+                    https://www.edix.com/es/instituto/que-es-url/</p><br>
+                <p>Morales, W. (2021, 1 junio). Métodos HTTP - POST, GET, PUT, DELETE. Estilo Web. 
+                    http://estilow3b.com/metodos-http-post-get-put-delete/</p><br>
+                <p>GET vs. POST: los dos métodos de petición HTTP más conocidos cara a cara. (2020, 11 agosto). 
+                    IONOS Digital Guide. https://www.ionos.mx/digitalguide/paginas-web/desarrollo-web/get-vs-post/</p><br>
+                <p>200 OK - HTTP | MDN. (2022, 26 noviembre). https://developer.mozilla.org/es/docs/Web/HTTP/Status/200</p><br>
+                <p>Error 404: ¿Qué significa y cómo solucionarlo? (2023, 31 enero). IONOS Digital Guide. 
+                    https://www.ionos.es/digitalguide/paginas-web/creacion-de-paginas-web/que-significa-el-error-404-not-found/</p><br>
+                <p>Qué es y cómo solucionar el Error 500. Internal server error. (2022, 21 junio). cdmon. 
+                    https://www.cdmon.com/es/blog/error-500-internal-server-error</p><br>
+                <p>05.Tags y atributos desaprobados en HTML - TODO HTML. (s. f.-b). 
+                    https://sites.google.com/site/dwebhtml/reference/deprecated</p><br>
+                <p>Barron, B. (2021, 8 abril). HTML vs HTML5: Conoce las diferencias cruciales entre ellos. Kinsta®. 
+                    https://kinsta.com/es/blog/html-vs-html5/</p><br>
+                <p>De León, D. P. (s.f.). Elemento table. https://www.htmlquick.com/es/reference/tags/table.html</p><br>
+                <p>Es/Elementos de formulario adicionales del HTML5 - Web Education Community Group. (s.f.). 
+                    https://www.w3.org/community/webed/wiki/Es/Elementos_de_formulario_adicionales_del_HTML5</p><br>
+                <p>Ciclo de vida de un sistema de información: fases y componentes. (s.f.).
+                    https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/ciclo-de-vida-de-un-sistema-de-informacion-
+                    fases-y-componentes</p><br>
+                <p>KeepCoding, R. (2023, 25 enero). ¿Qué es el ciclo de vida del desarrollo del sistema? KeepCoding Tech 
+                    School. https://keepcoding.io/blog/ciclo-de-vida-del-desarrollo-del-sistema/</p><br>
+            <article>
+
             </article>
 
         </section>
