Todas las preguntas

--- a/Laboratorio 3/lab3.html
+++ b/Laboratorio 3/lab3.html
@@ -45,6 +45,12 @@
                         Preguntas laboratorio 3
                     </a>
                 </li>
+
+                <li>
+                    <a href="lab3.html">
+                        Referencias
+                    </a>
+                </li>
             </ul>
 
         </nav>
@@ -298,9 +304,7 @@
             </article>
 
             <article class="article">
-                <h2>Preguntas Laboratorio 3</h2>
-                <br>
-
+                <h2>Preguntas Laboratorio 3</h2><br>
                 <ul>
                     <li>Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS?</li><br>
                     <p>La utilidad de !important es que al usarlo le damos prioridad a la propiedad que le precede.
@@ -313,9 +317,32 @@
                         nuevos buscadores leerán siempre lo que está marcado con !important y los viejos leerán 
                         aquellas características que no están marcadas.</p><br>
                     
-                    
+                    <li>Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?</li><br>
+                    <p>Entre las razones del porqué debemos tener cuidado con las imágenes de fondo, es que estas
+                        pueden dificultar la lectura al perderse el texto entre los colores de la imagen. Además 
+                        una razón similar es que si no carga correctamente la imagen, es posible que el texto se 
+                        pierda por ejemplo en un fondo blanco default. Lo otro con lo que debemos tener cuidado 
+                        es con la definición de la pantalla del usuario, ya que diferentes visitantes de tu sitio 
+                        también tendrán diferentes resoluciones de pantalla y es posible que la página web no se 
+                        muetre igual para todos.</p><br>
+
+                    <li>Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un 
+                        propiedad de estilo entre %, px y pt?</li><br>
+                    <p>Recomiendo usar % cuando queramos que un elemento de la página se vea igual sin depender 
+                        de la pantalla en la que se está viendo, pero también cuando sea necesario hacer calculos
+                        rápidos del tamaño que estamos buscando en algo. px lo recomiendo usar cuando queremos 
+                        ser más precisos en el tamaño que ocupará un elemento en la página y, por último, pt 
+                        recomiendo usarlo cuando nos estemos basando un poco más en el tamaño del texto en la 
+                        página</p><br>
+
+                    <li>¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</li><br>
+                    <p>Mientras menor sea el tamaño del archivo del css, menos ancho de banda necesitará 
+                        para descargarse de internet y por lo tanto, los usuarios podrán acceder más rápido a 
+                        tu pagina. Además esto también hace que la lectura del archivo se haga con rapidez</p><br>
                 </ul>
-            </article class="article">
+            </article>
+
+            <article class="article">
                 <h2>Referencias</h2><br>
                 <p>BBC News Mundo. (2019, 12 marzo). ¿Cuál es la diferencia entre internet y la web? 
                     (y por qué muchos las confunden). https://www.bbc.com/mundo/noticias-47538812</p><br>
@@ -342,8 +369,10 @@
                     fases-y-componentes</p><br>
                 <p>KeepCoding, R. (2023, 25 enero). ¿Qué es el ciclo de vida del desarrollo del sistema? KeepCoding Tech 
                     School. https://keepcoding.io/blog/ciclo-de-vida-del-desarrollo-del-sistema/</p><br>
-            <article>
-
+                <p>Declaración !important en CSS. (2010, 25 enero). Desarrollo Web. 
+                    https://desarrolloweb.com/articulos/declaracion-important-css.html</p><br>
+                <p>Fondos de imagen en HTML. (2021, 27 diciembre). Desarrollo Web. 
+                    https://desarrolloweb.com/articulos/1384.php</p><br>
             </article>
 
         </section>
