--- a/Laboratorio 4/lab4.html
+++ b/Laboratorio 4/lab4.html
@@ -6,9 +6,28 @@
     </head>
     <body>
 
-        <h1> Laboratorio 4</h1>
-
-        <div id="datos"></div>
+        <h1>Laboratorio 4</h1>
+        <br>
+        <h2>Problemas:</h2>
+        <br>
+        <!--Lista ordenada con los problemas-->
+        <ol>
+            <li>Entrada: un número pedido con un prompt. Salida: Una tabla con los números del 1 al número 
+                dado con sus cuadrados y cubos. Utiliza document.write para producir la salida 
+            </li><br>
+            <li>Entrada: Usando un prompt se pide el resultado de la suma de 2 números generados de manera 
+                aleatoria. Salida: La página debe indicar si el resultado fue correcto o incorrecto, y el tiempo 
+                que tardó el usuario en escribir la respuesta. 
+            </li><br>
+            <li>Función: contador. Parámetros: Un arreglo de números. Regresa: La cantidad de números negativos 
+                en el arreglo, la cantidad de 0's, y la cantidad de valores mayores a 0 en el arreglo.
+            </li><br>
+            <li>Función: promedios. Parámetros: Un arreglo de arreglos de números. Regresa: Un arreglo con los 
+                promedios de cada uno de los renglones de la matriz.
+            </li><br>
+            <li>Función: inverso. Parámetros: Un número. Regresa: El número con sus dígitos en orden inverso.</li><br>
+            <li>Problema personalizado</li>
+        </ol>
 
         <script src="JavaLab4.js" type="text/Javascript"></script>
     </body>
