--- a/Laboratorio 4/lab4.html
+++ b/Laboratorio 4/lab4.html
@@ -26,7 +26,10 @@
                 promedios de cada uno de los renglones de la matriz.
             </li><br>
             <li>Función: inverso. Parámetros: Un número. Regresa: El número con sus dígitos en orden inverso.</li><br>
-            <li>Problema personalizado</li>
+            <li>Problema personalizado: Por medio de una clase persona, se crea un objeto que simula ser una persona
+                que te saluda, diciendo su nombre, edad y dni. Los dos métodos que utiliza es justamente el de saludar 
+                pero también tiene un método para acceder al atributo dni que es privado.
+            </li><br>
         </ol>
 
         <script src="JavaLab4.js" type="text/Javascript"></script>
