--- a/Laboratorio 4/lab4.html
+++ b/Laboratorio 4/lab4.html
@@ -32,6 +32,72 @@
             </li><br>
         </ol>
 
+        <!--Mandamos a llamar al código en Javascript-->
         <script src="JavaLab4.js" type="text/Javascript"></script>
+
+        <h2>Preguntas</h2>
+        <br>
+        <ul>
+            <li>¿Qué diferencias y semejanzas hay entre Java y JavaScript?</li><br>
+            <p>La única semejanza entre Java y Javascript es que ambos proceden del lenguaje C, sin 
+                embargo tienen muchas diferencias:
+            </p><br>
+            <ul>
+                <li>Java es un lenguaje de programación orientado a objetos puros mientras que JavaScript 
+                    está basado en prototipos.</li><br>
+                <li>Java es un lenguaje compilado y JavaScript interpretado.</li><br>
+                <li>Java presenta un tipado fuerte, pero JavaScript tiene un tipado débil.</li><br>
+                <li>Java se ejecuta en la máquina virtual Java (JVM), mientras que JavaScript se ejecuta 
+                    en el navegador.</li><br>
+                <li>Java es un lenguaje de programación de tipo estático y JavaScript es dinámico.</li><br>
+            </ul>
+
+            <li>¿Qué métodos tiene el objeto Date? (Menciona al menos 5*)</li><br>
+            <ul>
+                <li>Métodos getFullYear() Nos devuelve el año con 4 dígitos.</li><br>
+                <li>Método getMonth() Nos devuelve el número de mes del 0 (enero) al 11 (diciembre)</li><br>
+                <li>Método getDate()</li><br>
+                <li>Método getDay()</li><br>
+                <li>Método getHours()</li><br>
+                <li>Método getMinutes()</li><br>
+                <li>Métodos getSeconds() / getMilliseconds() / getTime()</li><br>
+                <li>Métodos toString() / toDateString() / toTimeString()</li><br>
+            </ul>
+
+            <li>¿Qué métodos tienen los arreglos? (Menciona al menos 5*)</li><br>
+            <ul>
+                <li>push() - Inserta un elemento al final del arreglo.</li><br>
+                <li>unshift() - Inserta un elemento al inicio del arreglo.</li><br>
+                <li>pop() - Remueve un elemento del final del arreglo.</li><br>
+                <li>shift() - Remueve un elemento del principio del arreglo.</li><br>
+                <li>slice() - Crea una copia sombra del arreglo.</li><br>
+            </ul>
+
+            <li>¿Cómo se declara una variable con alcance local dentro de una función?</li><br>
+            <p>Las variables que se declaran dentro de un bloque de sentencias se denominan variables 
+                locales. Estas variables se crean al comienzo del bloque y se destruyen al salir del bloque 
+                al que pertenecen.</p><br>
+
+            <li>¿Qué implicaciones tiene utilizar variables globales dentro de funciones?</li><br>
+            <p>una variable es global cuando se declara fuera de todos los bloques. Las variables globales 
+                se conocen a lo largo de todo el programa y se pueden utilizar desde cualquier sitio. Todas 
+                las funciones y bloques declarados después de una variable global, podrán acceder a ella. Si 
+                dentro de un bloque se repite la declaración de una variable definida en un bloque exterior, 
+                el acceso se referirá exclusivamente a la variable dentro del bloque más interno. Es decir, 
+                el nombre de un bloque externo es válido a menos que un bloque interno lo vuelva a definir.</p><br>
+
+        </ul>
+
+        <h2>Referencias:</h2><br>
+        <p>Universidad Europea. (2022, 8 agosto). Diferencias entre Java y JavaScript. 
+            https://universidadeuropea.com/blog/diferencias-entre-java-y-javascript/</p><br>
+        <p>Digital Learning. (2017, 12 mayo). Métodos del objeto Date | Digital Learning. 
+            Digital Learning | Formación online en Nuevas Tecnologías. 
+            https://www.digitallearning.es/intro-programacion-js/metodos-date.html</p><br>
+        <p>Zubikarai, S. (2022, 12 enero). Manual de arreglos en JavaScript: Métodos de arreglos de 
+            JS explicados con ejemplos. freeCodeCamp.org. 
+            https://www.freecodecamp.org/espanol/news/el-manual-de-arreglos-en-javascript/</p><br>
+        <p>declaración de variables. (s. f.). https://ccia.ugr.es/%7Ejfv/ed1/c/cdrom/cap2/cap25.htm</p><br>
+
     </body>
 </html>
