--- a/Laboratorio 6/lab6.html
+++ b/Laboratorio 6/lab6.html
@@ -29,12 +29,12 @@
 
     <div id="mensaje">
         <h3>La contraseña debe tener las siguientes características:</h3>
-        <p id="letra" class="invalid">A  <b>lowercase</b> letter</p>
+        <p id="minuscula" class="invalid">A  <b>lowercase</b> letter</p>
         <p id="mayuscula" class="invalid">A <b>capital (uppercase)</b> letter</p>
         <p id="numero" class="invalid">A <b>number</b></p>
-        <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+        <p id="longitud" class="invalid">Minimum <b>8 characters</b></p>
     </div>
 
-    
+
 </body>
 </html>
