Parámetros de validación de contraseña

--- a/Laboratorio 6/lab6.html
+++ b/Laboratorio 6/lab6.html
@@ -35,6 +35,7 @@
         <p id="longitud" class="invalid">Minimum <b>8 characters</b></p>
     </div>
 
-
+    <!--Mandamos a llamar al código en Javascript-->
+    <script src="lab6script.js" type="text/Javascript"></script>
 </body>
 </html>
