--- a/Laboratorio 6/lab6.html
+++ b/Laboratorio 6/lab6.html
@@ -29,10 +29,10 @@
 
     <div id="mensaje">
         <h3>La contraseña debe tener las siguientes características:</h3>
-        <p id="minuscula" class="invalid">A  <b>lowercase</b> letter</p>
-        <p id="mayuscula" class="invalid">A <b>capital (uppercase)</b> letter</p>
-        <p id="numero" class="invalid">A <b>number</b></p>
-        <p id="longitud" class="invalid">Minimum <b>8 characters</b></p>
+        <p id="minuscula" class="invalid">Una <b>letra minuscula</b></p>
+        <p id="mayuscula" class="invalid">Una <b>letra mayúscula</b></p>
+        <p id="numero" class="invalid">Un <b>número</b></p>
+        <p id="longitud" class="invalid">Mínimo <b>8 caracteres</b></p>
     </div>
 
     <!--Mandamos a llamar al código en Javascript-->
